@@ -10,6 +10,7 @@ lbdb (0.49) UNRELEASED; urgency=medium
   * Upgrade to debhelper v13 and use debhelper-compat instead of d/compat.
   * Upgrade Standards-Version to 4.5.0.
   * Rename gitlab-ci.yml to salsa-ci.yml.
+  * Move mutt_ldap_query to /usr/bin, since it can be called separately.
 
  -- Roland Rosenfeld <roland@debian.org>  Mon, 11 Mar 2019 16:04:05 +0100
 
